/// Copyright (c) 2017 The Ustore Authors.

package ustore;

message BranchVersion {
  required string branch = 1;
  required string hash_base32 = 2;
}

message KeyVersion {
  required string key = 1; 
  repeated BranchVersion branches = 2;
}

message KeyVersions {
  repeated KeyVersion key_versions = 1;
}

